--- a/package.json
+++ b/package.json
@@ -13,27 +13,48 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "server": "json-server --watch api/db.json --routes api/routes.json"
   },
   "dependencies": {
-    "gatsby": "^5.12.12",
-    "gatsby-plugin-google-gtag": "^5.12.3",
-    "gatsby-plugin-image": "^3.12.3",
-    "gatsby-plugin-manifest": "^5.12.3",
-    "gatsby-plugin-sass": "^6.12.3",
-    "gatsby-plugin-sharp": "^5.12.3",
-    "gatsby-plugin-sitemap": "^6.12.3",
-    "gatsby-source-filesystem": "^5.12.1",
-    "gatsby-source-shopify": "^8.12.3",
-    "gatsby-transformer-sharp": "^5.12.3",
+    "@builder.io/partytown": "^0.7.5",
+    "@chakra-ui/gatsby-plugin": "^3.1.1",
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@types/file-saver": "^2.0.5",
+    "framer-motion": "^9.0.4",
+    "gatsby": "^5.4.0",
+    "gatsby-plugin-google-analytics": "^5.6.0",
+    "gatsby-plugin-google-gtag": "^5.4.0",
+    "gatsby-plugin-image": "^3.4.0",
+    "gatsby-plugin-manifest": "^5.4.0",
+    "gatsby-plugin-offline": "^6.6.0",
+    "gatsby-plugin-react-helmet": "^6.6.0",
+    "gatsby-plugin-sass": "^6.4.0",
+    "gatsby-plugin-sharp": "^5.4.0",
+    "gatsby-plugin-sitemap": "^6.4.0",
+    "gatsby-source-filesystem": "^5.6.0",
+    "gatsby-source-sanity": "^7.6.1",
+    "gatsby-transformer-sharp": "^5.4.0",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.5"
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.43.1",
+    "react-icons": "^4.7.1",
+    "react-select": "^5.7.0",
+    "react-waypoint": "^10.3.0",
+    "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.3.3",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "typescript": "^5.1.6"
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "typescript": "^4.9.4"
   }
 }
