--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "develop": "gatsby develop",
     "start": "gatsby develop",
     "build": "gatsby build",
+    "deploy": "gatsby build && gh-pages -d public -b main",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "typecheck": "tsc --noEmit",
@@ -37,6 +38,7 @@
     "gatsby-source-filesystem": "^5.6.0",
     "gatsby-source-sanity": "^7.6.1",
     "gatsby-transformer-sharp": "^5.4.0",
+    "gh-pages": "^6.1.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
